--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>my first git project</title>
 </head>
 <body>
-    <h2>My first GIT project</h2>
+    <h2>My first GIT project1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At enim atque mollitia dolorem, nesciunt temporibus eveniet soluta tempora itaque porro adipisci fugiat error repellendus placeat aliquam saepe accusantium cum maxime.</p>
 </body>
 </html>
